tests/ui/g-loop-route-reversed-arms.stderr
error[E0080]: evaluation panicked: loop routes must order arms as continue then break
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project_role::<0, hibana::g::Route<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<162, (), hibana::integration::cap::control::LoopBreakKind>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_program_projection::<hibana::g::Route<hibana::g::Send<Role<0>, Role<0>, Msg<162, (), LoopBreakKind>>, hibana::g::Send<Role<0>, Role<0>, Msg<161, (), LoopContinueKind>>>>`
 --> src/g.rs
  |
  |         panic_program_source_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_program_source_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |         3 => panic!("loop routes must order arms as continue then break"),
  |              ------------------------------------------------------------ in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project_role::<0, hibana::g::Route<hibana::g::Send<Role<0>, Role<0>, Msg<162, (), LoopBreakKind>>, hibana::g::Send<Role<0>, Role<0>, Msg<161, (), LoopContinueKind>>>>`
 --> src/global/role_program/program.rs
  |
  |         crate::g::project_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
